# robot_task_space_control

./: .gitignore  README.md  ik_quadratic_programmin.py  pyproject.toml  requirements.txt  setup.py
mujoco_robot_control/: add_mujoco_section.py  ik_levenberg_marquardt.py  ik_quadratic_programming.py  robot_env.py
mujoco_robot_control/assets/unitree_h1/: h1.xml
mujoco_robot_control/assets/universal_robots_ur5e/: ur5e.xml
mujoco_robot_control/examples/: inverse_kinematic_h1.py  inverse_kinematic_ur5e.py
src/: ik_gradient_descent.py  ik_levenberg_marquardt.py  ik_quadratic_programming.py  robot_env.py  simulate.py
src/assets/unitree_h1/: h1.xml  scene.xml
src/assets/universal_robots_ur5e/: ur5e.xml
src/examples/: inverse_kinematic.py  inverse_kinematic_h1.py
test/: h1_mujoco_env_test copy.ipynb  ur5e_mujoco_env_test.ipynb
