[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.0.1"
description = "A repository for robot motion control"
authors = [
    { name = "Parsa Bakhshandeh", email = "parsa7676@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["example"]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = false

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
include = ["src"]
exclude = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "black",
]
